# CatalystZero

./: CMakeLists.txt  build_and_run.bat  imgui.ini
Engine/: common.hpp  ecs.cpp  ecs.hpp  editor.cpp  editor.hpp  file_reader.hpp  input.cpp  input.hpp  main.cpp
Game/: game.cpp  game.hpp
Resources/shaders/: default.fs.glsl  default.vs.glsl
Shared/: arena_allocator.hpp  log.hpp  math.hpp  string.hpp
